--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </p>
     </td>
     <td width="40%" align="center">
-        <img src="./images/xiaoxin.jpg" width="70%" />
+        <img src="./images/e17957ccef8d07bc9b7944bcbd976cb.jpg" width="70%" />
     </td>
 </tr>
 </table>
