--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <h2 id="about-me">About Me</h2>
 <hr style="margin-top:-16px;margin-bottom:10px;" />
 
-<p>I am currently a laster-year Master student in <a href="http://english.ihep.cas.cn/">Data acquisition Laboratory (DAQ)</a>, Institute of High Energy Physics, Chinese Academy of Sciences (IHEP), supervised by A/Prof. Xiaolu Ji. Before that, I received my bachelor's degree from the mechatronics of University of Science and Technology Beijing (USTB) in July 2018.</p>
+<p>I am currently a second-year Master student in <a href="http://english.ihep.cas.cn/">Data acquisition Laboratory (DAQ)</a>, Institute of High Energy Physics, Chinese Academy of Sciences (IHEP), supervised by A/Prof. Xiaolu Ji. Before that, I received my bachelor's degree from the mechatronics of University of Science and Technology Beijing (USTB) in July 2018.</p>
 
 <p>My research interests focuses on computer vision and deep learning.</p>
 
